--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -14,7 +14,7 @@ spring:
           enabled: true
       routes:
       - id: master
-        uri: http://localhost:8091
+        uri: lb://master
         predicates:
         - Path=/test/**
         filters:
