--- a/gateway-service.yml
+++ b/gateway-service.yml
@@ -16,6 +16,6 @@ spring:
       - id: master
         uri: lb://master
         predicates:
-        - Path=/test/**
+        - Path=/master/**
         filters:
         
